--- a/index.html
+++ b/index.html
@@ -720,307 +720,208 @@
       </div>
     </section>
 
-    <!-- Timetable Section Desktop -->
-    <section class="timetable-section-container-outer" id="timetable">
-      <h2>Timetable</h2>
-      <div class="filter-classes-container">
-        <button class="time-table-button" id="all">All Classes</button>
-        <button class="time-table-button" id="bjj">BJJ</button>
-        <button class="time-table-button" id="muay-thai">Muay Thai</button>
-        <button class="time-table-button" id="kickboxing">Kickboxing</button>
-        <button class="time-table-button" id="korean-kickboxing">Korean Kickboxing</button>
-        <button class="time-table-button" id="karate">Kenpo Karate</button>
-        <!-- <button class="time-table-button" id="open-mat">Open Mat</button> -->
-      </div>
-      <table class="timetable-section-container-inner">
-        <tr>
-          <th>Monday</th>
-          <th>Tuesday</th>
-          <th>Wednesday</th>
-          <th>Thursday</th>
-          <th>Friday</th>
-          <th>Saturday</th>
-          <th>Sunday</th>
-        </tr>
+ <!-- Timetable Section Desktop -->
+<section class="timetable-section-container-outer" id="timetable">
+  <h2>Timetable</h2>
+  <div class="filter-classes-container">
+    <button class="time-table-button" id="all">All Classes</button>
+    <button class="time-table-button" id="bjj">BJJ</button>
+    <button class="time-table-button" id="muay-thai">Muay Thai</button>
+    <button class="time-table-button" id="kickboxing">Kickboxing</button>
+    <button class="time-table-button" id="korean-kickboxing">Korean Kickboxing</button>
+    <button class="time-table-button" id="karate">Kenpo Karate</button>
+    <button class="time-table-button" id="open-mat">Open Mat</button>
+  </div>
+  <table class="timetable-section-container-inner">
+    <tr>
+      <th>Monday</th>
+      <th>Tuesday</th>
+      <th>Wednesday</th>
+      <th>Thursday</th>
+      <th>Friday</th>
+      <th>Saturday</th>
+      <th>Sunday</th>
+    </tr>
 
-        <tr>
-          <!-- Monday Row 1 -->
-          <td class="class muay-thai" data-cell="class">
-            Muay Thai <br />
-            (age 6-14)
-            <div class="time" data-cell="time">6:00pm - 6:45pm</div>
-          </td>
-          <!-- Tuesday Row 1 -->
-          <td class="class bjj" data-cell="class">
-            BJJ  <br />
-            (age 5-11)
-            <div class="time" data-cell="time">6:00pm - 6:45pm</div>
-          </td>
-          <!-- Wednesday Row 1 -->
-          <td class="class kickboxing" data-cell="class">
-            Kickboxing <br />(age 5-11)
-            <div class="time" data-cell="time">5:00pm - 5:45pm</div>
-          </td>
-          <!-- Thursday Row 1 -->
-          <td class="class korean-kickboxing" data-cell="class">
-            Korean Kickboxing <br />
-            (age 5-12)
-            <div class="time" data-cell="time">6:00pm - 6:45pm</div>
-          </td>
-          <!-- Friday Row 1 -->
-          <td class="class closed" data-cell="class">Closed</td>
-          <!-- Saturday Row 1 -->
-          <td class="class karate" data-cell="class">
-            Kenpo Karate <br />
-            (age 5-10)
-            <div class="time" data-cell="time">9:30am - 10:15am</div>
-          </td>
-          <!-- Sunday Row 1 -->
-          <td class="class closed" data-cell="class">Closed</td>
-        </tr>
-        <tr>
-          <!-- Monday Row 2 -->
+    <tr>
+      <!-- Monday Row 1 -->
+      <td class="class muay-thai" data-cell="class">
+        Muay Thai <br />
+        (Age 7-14)
+        <div class="time" data-cell="time">6:00pm - 6:45pm</div>
+      </td>
+      <!-- Tuesday Row 1 -->
+      <td class="class bjj" data-cell="class">
+        BJJ <br />
+        (Age 5-10)
+        <div class="time" data-cell="time">6:00pm - 6:45pm</div>
+      </td>
+      <!-- Wednesday Row 1 -->
+      <td class="class kickboxing" data-cell="class">
+        Kickboxing <br />(Age 5-11)
+        <div class="time" data-cell="time">5:00pm - 5:45pm</div>
+      </td>
+      <!-- Thursday Row 1 -->
+      <td class="class korean-kickboxing" data-cell="class">
+        Korean Kickboxing <br />
+        (Age 5-12)
+        <div class="time" data-cell="time">6:00pm - 6:45pm</div>
+      </td>
+      <!-- Friday Row 1 -->
+      <td class="class closed" data-cell="class">Private Training Available</td>
+      <!-- Saturday Row 1 -->
+      <td class="class karate" data-cell="class">
+        Kenpo Karate <br />
+        (Age 5-11)
+        <div class="time" data-cell="time">9:30am - 10:15am</div>
+      </td>
+      <!-- Sunday Row 1 -->
+      <td class="class closed" data-cell="class">Closed</td>
+    </tr>
+    <tr>
+      <!-- Monday Row 2 -->
+      <td class="class bjj" data-cell="class">
+        BJJ Fundamentals <br />
+        (Age 16+)
+        <div class="time" data-cell="time">7:00pm - 8:00pm</div>
+      </td>
+      <!-- Tuesday Row 2 -->
+      <td class="class bjj" data-cell="class">
+        BJJ <br />
+        (U15)
+        <div class="time" data-cell="time">7:00pm - 8:00pm</div>
+      </td>
+      <!-- Wednesday Row 2 -->
+      <td class="class kickboxing" data-cell="class">
+        Kickboxing <br />(Age U17)
+        <div class="time" data-cell="time">6:00pm - 7:00pm</div>
+      </td>
+      <!-- Thursday Row 2 -->
+      <td class="class bjj" data-cell="class">
+        BJJ Fundamentals <br />
+        (Age 16+)
+        <div class="time" data-cell="time">7:00pm - 8:00pm</div>
+      </td>
+      <!-- Friday Row 2 -->
+      <td class="class closed" data-cell="class">Private Training Available</td>
+      <!-- Saturday Row 2 -->
+      <td class="class karate" data-cell="class">
+        Kenpo Karate <br />
+        (Age 12-15)
+        <div class="time" data-cell="time">10:30am - 11:30am</div>
+      </td>
+      <td class="class closed" data-cell="class">Closed</td>
+    </tr>
+    <tr>
+      <!-- Monday Row 3 -->
+      <td class="class muay-thai" data-cell="class">
+        Muay Thai <br />
+        (Age 15+)
+        <div class="time" data-cell="time">8:00pm - 9:00pm</div>
+      </td>
+      <!-- Tuesday Row 3 -->
+      <td class="class bjj" data-cell="class">
+        BJJ Sparring <br />
+        (2X Stripe W Belt+)
+        <div class="time" data-cell="time">8:00pm - 9:00pm</div>
+      </td>
+      <!-- Wednesday Row 3 -->
+      <td class="class karate" data-cell="class">
+        Kenpo Karate <br />
+        (Age U15)
+        <div class="time" data-cell="time">7:00pm - 8:00pm</div>
+      </td>
+      <!-- Thursday Row 3 -->
+      <td class="class muay-thai" data-cell="class">
+        Muay Thai <br />
+        (Age 15+)
+        <div class="time" data-cell="time">8:00pm - 9:00pm</div>
+      </td>
+      <!--Friday Row 3 -->
+      <td class="class closed" data-cell="class">Private Training Available</td>
+      <!-- Saturday Row 3 -->
+      <td class="class karate" data-cell="class">
+        Kenpo Karate <br />
+        (Age 16+)
+        <div class="time" data-cell="time">11:30am - 12:30pm</div>
+      </td>
+      <!--Sunday Row 3 -->
+      <td class="class closed" data-cell="class">Closed</td>
+    </tr>
+    <tr>
+      <!-- Monday Row 4 -->
+      <td></td>
+      <!-- Tuesday Row 4 -->
+      <td></td>
+      <!-- Wednesday Row 4 -->
+      <td class="class karate" data-cell="class">
+        Kenpo Karate <br />
+        (Age 16+)
+        <div class="time" data-cell="time">8:00pm - 9:00pm</div>
+      </td>
+      <!--Thursday Row 4 -->
+      <td></td>
+      <!-- Friday Row 4 -->
+      <td class="class closed" data-cell="class">Private Training Available</td>
+      <!-- Saturday Row 4 -->
+      <td class="class open-mat" data-cell="class">
+        BJJ Open Mat <br />
 
-          <td class="class bjj" data-cell="class">
-            BJJ  <br />
-            (age 16+)
-            <div class="time" data-cell="time">7:00pm - 8:00pm</div>
-          </td>
-          <!-- Tuesday Row 2 -->
-          <td class="class bjj" data-cell="class">
-            BJJ  <br />
-            (age 12-15)
-            <div class="time" data-cell="time">7:00pm - 8:00pm</div>
-          </td>
-          <!-- Wednesday Row 2 -->
-          <td class="class kickboxing" data-cell="class">
-            Kickboxing <br />(age 12-17)
-            <div class="time" data-cell="time">6:00pm - 7:00pm</div>
-          </td>
-          <!-- Thursday Row 2 -->
-          <td class="class bjj" data-cell="class">
-            BJJ  <br />
-            (age 16+)
-            <div class="time" data-cell="time">7:00pm - 8:00pm</div>
-          </td>
-          <!-- Friday Row 2 -->
-          <td class="class closed" data-cell="class">Closed</td>
-          <!-- Saturday Row 2 -->
-          <td class="class karate" data-cell="class">
-            Kenpo Karate <br />
-            (age 11-15)
-            <div class="time" data-cell="time">10:30am - 11:30am</div>
-          </td>
-          <td class="class closed" data-cell="class">Closed</td>
-        </tr>
-        <tr>
-          <!-- Monday Row 3 -->
-          <td class="class muay-thai" data-cell="class">
-            Muay Thai <br />
-            (age 15+)
-            <div class="time" data-cell="time">8:00pm - 9:00pm</div>
-          </td>
+        <div class="time" data-cell="time">12:30pm - 1:30pm</div>
+      </td>
+      <!-- Sunday Row 4 -->
+      <td class="class closed" data-cell="class">Closed</td>
+    </tr>
+  </table>
 
-          <!-- Tuesday Row 3 -->
-          <td class="class bjj" data-cell="class">
-            BJJ  <br />
-            (age 16+)
-            <div class="time" data-cell="time">8:00pm - 9:00pm</div>
-          </td>
-          <!-- Wednesday Row 3 -->
-          <td class="class karate" data-cell="class">
-            Kenpo Karate <br />
-            (age 11-15)
-            <div class="time" data-cell="time">7:00pm - 8:00pm</div>
-          </td>
-          <!-- Thursday Row 3 -->
-          <td class="class muay-thai" data-cell="class">
-            Muay Thai <br />
-            (age 15+)
-            <div class="time" data-cell="time">8:00pm - 9:00pm</div>
-          </td>
-          <!--Friday Row 3 -->
-          <td class="class closed" data-cell="class">Closed</td>
-          <!-- Saturday Row 3 -->
-          <td class="class karate" data-cell="class">
-            Kenpo Karate <br />
-            (age 16+)
-            <div class="time" data-cell="time">11:30am - 1:00pm</div>
-          </td>
-          <!--Sunday Row 3 -->
-          <td class="class closed" data-cell="class">Closed</td>
-        </tr>
-        <tr>
-          <!-- Monday Row 4 -->
-          <td class="class" data-cell="class">
-            <div class="time" data-cell="time"></div>
-          </td>
-          <!-- Tuesday Row 4 -->
-          <td></td>
-          <!-- Wednesday Row 4 -->
-          <td class="class karate" data-cell="class">
-            Kenpo Karate <br />
-            (age 16+)
-            <div class="time" data-cell="time">8:00pm - 9:00pm</div>
-          </td>
-          <!--Thursday Row 4 -->
-          <td data-cell="class"></td>
-          <!-- Friday Row 4 -->
-          <td class="class closed" data-cell="class">Closed</td>
-          <!-- Saturday Row 4 -->
-          <td class="class bjj" data-cell="class">
-            BJJ <br />
-            (age 16+)
-            <div class="time" data-cell="time">1:00pm - 2:00pm</div>
-          </td>
-          <!-- Sunday Row 4 -->
-          <td class="class closed" data-cell="class">Closed</td>
-        </tr>
-      </table>
-      <!-- Timetable Section Mobile -->
-      <table class="timetable-section-container-inner-mobile">
-        <!-- Monday -->
-        <tr>
-          <th>Monday</th>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">
-            Muay Thai (age 6-14)
-            <span class="time" data-cell="time">6:00pm - 6:45pm</span>
-          </td>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">
-            BJJ (age 16+)
-            <span class="time" data-cell="time">7:00pm - 8:00pm</span>
-          </td>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">
-            Muay Thai (age 15+)
-            <span class="time" data-cell="time">8:00pm - 9:00pm</span>
-          </td>
-        </tr>
-        <tr></tr>
-        <tr></tr>
-        <!-- Tuesday -->
-        <tr>
-          <th>Tuesday</th>
-        </tr>
+  <!-- Timetable Section Mobile -->
+  <table class="timetable-section-container-inner-mobile">
+    <!-- Monday -->
+    <tr><th>Monday</th></tr>
+    <tr><td class="class">Muay Thai (Age 7-14)<span class="time">6:00pm - 6:45pm</span></td></tr>
+    <tr><td class="class">BJJ Fundamentals (Age 16+)<span class="time">7:00pm - 8:00pm</span></td></tr>
+    <tr><td class="class">Muay Thai (Age 15+)<span class="time">8:00pm - 9:00pm</span></td></tr>
 
-        <tr>
-          <td class="class" data-cell="class">
-            BJJ (age 5-11)
-            <div class="time" data-cell="time">6:00pm - 6:45pm</div>
-          </td>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">
-            BJJ  (age 12-15)
-            <div class="time" data-cell="time">7:00pm - 8:00pm</div>
-          </td>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">
-            BJJ (age 16+)
-            <div class="time" data-cell="time">8:00pm - 9:00pm</div>
-          </td>
-        </tr>
+    <!-- Tuesday -->
+    <tr><th>Tuesday</th></tr>
+    <tr><td class="class">BJJ (Age 5-10)<span class="time">6:00pm - 6:45pm</span></td></tr>
+    <tr><td class="class">BJJ (U15)<span class="time">7:00pm - 8:00pm</span></td></tr>
+    <tr><td class="class">BJJ Sparring <span class="time">8:00pm - 9:00pm</span></td></tr>
 
-        <!-- Wednesday -->
-        <tr>
-          <th>Wednesday</th>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">
-            Kickboxing (age 5-11)
-            <div class="time" data-cell="time">5:00pm - 5:45pm</div>
-          </td>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">
-            Kickboxing (age 12-17)
-            <div class="time" data-cell="time">6:00pm - 7:00pm</div>
-          </td>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">
-            Kenpo Karate (age 11-15)
-            <div class="time" data-cell="time">7:00pm - 8:00pm</div>
-          </td>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">
-            Kenpo Karate (age 16+)
-            <div class="time" data-cell="time">8:00pm - 9:00pm</div>
-          </td>
-        </tr>
-        <!-- Thursday -->
-        <tr>
-          <th>Thursday</th>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">
-            Korean Kickboxing (age 5-12)
-            <div class="time" data-cell="time">6:00pm - 6:45pm</div>
-          </td>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">
-            BJJ  (age 16+)
-            <div class="time" data-cell="time">7:00pm - 8:00pm</div>
-          </td>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">
-            Muay Thai (age 15+)
-            <div class="time" data-cell="time">8:00pm - 9:00pm</div>
-          </td>
-        </tr>
-        <!-- Friday -->
-        <tr>
-          <th>Friday</th>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">Closed</td>
-        </tr>
-        <!-- Saturday -->
-        <tr>
-          <th>Saturday</th>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">
-            Kenpo Karate (age 5-10)
-            <div class="time" data-cell="time">9:30am - 10:15am</div>
-          </td>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">
-            Kenpo Karate (age 11-15)
-            <div class="time" data-cell="time">10:30am - 11:30am</div>
-          </td>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">
-            Kenpo Karate  (age 16+)
-            <div class="time" data-cell="time">11:30am - 1:00pm</div>
-          </td>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">
-            BJJ (age 16+)
-            <div class="time" data-cell="time">1:00pm - 2:00pm</div>
-          </td>
-        </tr>
-        <!-- Sunday -->
-        <tr>
-          <th>Sunday</th>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">Closed</td>
-        </tr>
-      </table>
-    </section>
+    <!-- Wednesday -->
+    <tr><th>Wednesday</th></tr>
+    <tr><td class="class">Kickboxing (Age 5-11)<span class="time">5:00pm - 5:45pm</span></td></tr>
+    <tr><td class="class">Kickboxing (Age U17)<span class="time">6:00pm - 7:00pm</span></td></tr>
+    <tr><td class="class">Kenpo Karate (Age U15)<span class="time">7:00pm - 8:00pm</span></td></tr>
+    <tr><td class="class">Kenpo Karate (Age 16+)<span class="time">8:00pm - 9:00pm</span></td></tr>
+
+    <!-- Thursday -->
+    <tr><th>Thursday</th></tr>
+    <tr><td class="class">Korean Kickboxing (Age 5-12)<span class="time">6:00pm - 6:45pm</span></td></tr>
+    <tr><td class="class">BJJ Fundamentals (Age 16+)<span class="time">7:00pm - 8:00pm</span></td></tr>
+    <tr><td class="class">Muay Thai (Age 15+)<span class="time">8:00pm - 9:00pm</span></td></tr>
+
+    <!-- Friday -->
+    <tr><th>Friday</th></tr>
+    <tr><td class="class">Private / Small Group Training Available</td></tr>
+
+    <!-- Saturday -->
+    <tr><th>Saturday</th></tr>
+    <tr><td class="class">Kenpo Karate (Age 5-11)<span class="time">9:30am - 10:15am</span></td></tr>
+    <tr><td class="class">Kenpo Karate (Age 12-15)<span class="time">10:30am - 11:30am</span></td></tr>
+    <tr><td class="class">Kenpo Karate (Age 16+)<span class="time">11:30am - 12:30pm</span></td></tr>
+    <tr><td class="class">BJJ Open Mat (Members Only)<span class="time">12:30pm - 1:30pm</span></td></tr>
+
+    <!-- Sunday -->
+    <tr><th>Sunday</th></tr>
+    <tr><td class="class">Closed</td></tr>
+  </table>
+</section>
+
+
+
+
+
 
     <!-- FAQ Section -->
     <section class="faq-section-container-outer" id="faqs">
