Perosnal Training Section

--- a/index.html
+++ b/index.html
@@ -592,6 +592,14 @@
             <a href="./korean-kickboxing.html" class="card-btn class-korean-kickboxing">Learn More <span class="sr-only">about Korean Kickboxing</span></a>
           </div>
         </div>
+
+        <div class="card card-personal-training">
+          <div class="card-content">
+            <h3 class="card-header">Personal Training with Kalum</h3>
+            <p class="card-subheader">While your kids train downstairs, get your own workout in upstairs with Kalum, a certified fitness instructor from Dunboyne College.</p>
+            <a href="./personal-training.html" class="card-btn class-korean-kickboxing">Learn More <span class="sr-only">Personal Training with Kalum</span></a>
+          </div>
+        </div>
       </div>
       <div class="shape-divider-bottom classes">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
