Personal Training Page

--- a/personal-training.html
+++ b/personal-training.html
@@ -301,7 +301,7 @@
     <!-- Section - Our Karate Class Format -->
     <section class="our-class-format-container-outer">
       <div class="our-class-format-container-inner">
-        <img src="./images/our-classes-personal-training.png" alt="Karate Sparring class at Golde Tiger Academy" />
+        <img src="./images/page-personal-training-01.png" alt="Kalum Byrne Training Muay Thai" />
 
         <div class="class-text">
           <div class="class-format">
