--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
         <div class="card card-personal-training">
           <div class="card-content">
             <h3 class="card-header">Personal Training with Kalum</h3>
-            <p class="card-subheader">While your kids train downstairs, get your own workout in upstairs with Kalum, a certified fitness instructor from Dunboyne College.</p>
+            <p class="card-subheader">While your kids train downstairs, get your own workout in upstairs with Kalum, a certified fitness instructor.</p>
             <a href="./personal-training.html" class="card-btn class-korean-kickboxing">Learn More <span class="sr-only">Personal Training with Kalum</span></a>
           </div>
         </div>
