Private Martial  Arta Training with Kalum

--- a/index.html
+++ b/index.html
@@ -595,9 +595,9 @@
 
         <div class="card card-personal-training">
           <div class="card-content">
-            <h3 class="card-header">Personal Training with Kalum</h3>
-            <p class="card-subheader">While your kids train downstairs, get your own workout in upstairs with Kalum, a certified fitness instructor.</p>
-            <a href="./personal-training.html" class="card-btn class-korean-kickboxing">Learn More <span class="sr-only">Personal Training with Kalum</span></a>
+            <h3 class="card-header">Private Martial Arts Training</h3>
+            <p class="card-subheader">Train 1-to-1 with Kalum Byrne in Brazilian Jiu-Jitsu, Kickboxing, or Muay Thai. Personalised coaching for all levels.</p>
+            <a href="./private-martial-arts-training.html" class="card-btn class-korean-kickboxing">Learn More <span class="sr-only">Personal Training with Kalum</span></a>
           </div>
         </div>
       </div>
