--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
         </div>
 
         <div class="card card-personal-training">
-          <div class="ribbon">NEW, Limited Spots!</div>
+          <!-- <div class="ribbon">NEW, Limited Spots!</div> -->
           <div class="card-content">
             <h3 class="card-header">Private Martial Arts Training</h3>
             <p class="card-subheader">Train 1-to-1 with Kalum Byrne in Brazilian Jiu-Jitsu, Kickboxing, or Muay Thai. Personalised coaching for all levels.</p>
