--- a/contact-us.html
+++ b/contact-us.html
@@ -291,7 +291,7 @@
           <!-- Subject Header  -->
           <input type="hidden" name="from_name" value="Golden Tiger Academy" />
           <input type="hidden" name="subject" value="New Inquiry - GTA" />
-          <input type="hidden" name="redirect" value="https://user9511.github.io/golden-tiger-academy-main/thank-you" />
+          <input type="hidden" name="redirect" value="https://goldentigeracademy.com/thank-you" />
 
           <input id="btn-submit" type="submit" value="Submit" />
         </form>
