--- a/private-martial-arts-training.html
+++ b/private-martial-arts-training.html
@@ -289,7 +289,7 @@
     <section class="class-intro-container-outer">
       <div class="class-intro-container-inner">
         <h1 class="class-title">Private Martial Arts Training</h1>
-        <p>Looking for focused, one-to-one martial arts coaching tailored specifically to you? Train privately with Kalum Byrne at Golden Tiger Academy in Dunboyne. These personalised sessions are ideal for adults who want faster progress, individual attention, and training built around their goals, whether that’s fitness, self-defence, skill development, or confidence. Kalum has trained in martial arts since the age of 4 and brings a deep understanding of movement, technique, and conditioning to every session. Private lessons are suitable for complete beginners through to experienced martial artists.</p>
+        <p>Looking for focused, one-to-one martial arts coaching tailored specifically to you? Train privately with Kalum Byrne at Golden Tiger Academy in Dunboyne. These personalised sessions are ideal for adults who want faster progress, individual attention, and training built around their goals, whether that’s fitness, self-defence, skill development, or confidence. Kalum has trained in martial arts since the age of 4 and with over 16 years of Martial Arts training brings a deep understanding of movement, technique, and conditioning to every session. Private lessons are suitable for complete beginners through to experienced martial artists.</p>
       </div>
       <div class="shape-divider-bottom">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -320,7 +320,7 @@
               <li>- Kickboxing and Muay Thai striking fundamentals</li>
               <li>- Technical breakdowns and personalised feedback</li>
               <li>- Safe techniques with injury prevention focus</li>
-              <li>- Strong focus on safety and injury prevention</li>
+              <li>- Helping to build confidence through weekly progress</li>
               <li>- Supportive, no-pressure learning environment</li>
             </ul>
           </div>
