--- a/muay-thai.html
+++ b/muay-thai.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <!-- Google Adsense -->
@@ -306,7 +306,7 @@
         <div class="class-text">
           <div class="class-format">
             <h2>Muay Thai Instructor</h2>
-            <p>At Golden Tiger Academy, we offer two Muay Thai classes each week, taking place on Mondays and Thursdays. Led by our experienced instructor, Paul Wright, a former European champion in Muay Thai, these classes provide a comprehensive training experience for individuals aged 16 and above.</p>
+            <p>At Golden Tiger Academy, we offer two Muay Thai classes each week, taking place on Mondays and Thursdays, these classes provide a comprehensive training experience for individuals aged 16 and above.</p>
           </div>
           <div class="class-format">
             <h2>Muay Thai Class</h2>
